# HaHaNoGo

./: CMakeLists.txt  MCTStree.cpp  MCTStree.h  Main.cpp  README.md  bitboard.h  board.cpp  board.h  boardcn.h  ucbnode.cpp  ucbnode.h  zhashtable.h
self-play_games/: haha100k-0.sgf  haha100k-1.sgf  haha100k-2.sgf  haha100k-3.sgf  haha100k-4.sgf  haha100k-5.sgf  haha100k-6.sgf  haha100k-7.sgf  haha100k-8.sgf  haha100k-9.sgf  haha10k-0.sgf  haha10k-1.sgf  haha10k-2.sgf  haha10k-3.sgf  haha10k-4.sgf  haha10k-5.sgf  haha10k-6.sgf  haha10k-7.sgf  haha10k-8.sgf  haha10k-9.sgf  haha1k-0.sgf  haha1k-1.sgf  haha1k-2.sgf  haha1k-3.sgf  haha1k-4.sgf  haha1k-5.sgf  haha1k-6.sgf  haha1k-7.sgf  haha1k-8.sgf  haha1k-9.sgf
