CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(hahanogo)

SET(EXECUTABLE hahanogo)
SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -Wall -O3")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
FILE(GLOB SRC_FILES *.cpp)
ADD_EXECUTABLE(${EXECUTABLE}  ${SRC_FILES})

MESSAGE(STATUS "PYTHON_INCLUDE_DIRS = ${PYTHON_INCLUDE_DIRS}")
SET(PROJECT_LIBRARIES ${PYTHON_LIBRARIES} )
SET(PROJECT_INCLUDES ${PYTHON_INCLUDE_DIRS} )

MESSAGE(Project_include_path: ${PROJECT_INCLUDES})
MESSAGE(Project_libraries_path: ${PROJECT_LIBRARIES})
INCLUDE_DIRECTORIES(${PROJECT_INCLUDES})
TARGET_LINK_LIBRARIES(${EXECUTABLE} ${PROJECT_LIBRARIES})
